update deps etc

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
-
-<head>
+  <head>
     <title>slackoverflow</title>
-    <meta name="robots" content="noindex">
-</head>
+    <meta name="robots" content="noindex" />
+  </head>
 
-<body>
+  <body>
     <h2>foo</h2>
-</body>
-
+  </body>
 </html>
